# llm-pycascade

./: .gitignore  .readthedocs.yaml  README.md  config.example.toml  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish.yml  rtd-publish.yml
.kilo/plans/: 1784060424714-mkdocs-rtd-docs-plan.md
docs/: changelog.md  concepts.md  configuration.md  error-handling.md  index.md  installation.md  providers.md  quickstart.md  requirements.txt  secrets.md  tools.md
docs/reference/: cascade.md  config.md  db.md  error.md  models.md  persistence.md  providers.md  secrets.md
src/llm_pycascade/: __init__.py  cascade.py  config.py  db.py  error.py  persistence.py  secrets.py
src/llm_pycascade/models/: __init__.py  conversation.py  response.py  tool.py
src/llm_pycascade/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
tests/: test_cascade.py  test_error.py  test_ollama_provider.py  test_openai_provider.py
