[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-pycascade"
version = "0.1.0"
description = "Resilient cascading LLM inference across multiple providers with failover, circuit breaking, and retry cooldowns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Luigi" },
]
keywords = ["llm", "cascade", "failover", "inference", "openai", "anthropic", "gemini", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
keyring = ["keyring>=25.0"]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/paluigi/llm-pycascade"
Repository = "https://github.com/paluigi/llm-pycascade"
Issues = "https://github.com/paluigi/llm-pycascade/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_pycascade"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
